fix scroll reviews and h2 in index section reviews+ br br in section article

--- a/app/article.html
+++ b/app/article.html
@@ -407,31 +407,32 @@
                 железобетонной чаши. При обследовании чаши были выявлены следующие моменты:
                 Бассейн переливного типа, был построен около десяти лет назад, что в общем то, не является значительным
                 сроком
-                для плиточного бассейна. При обследовании были выявлены следующие «заболевания» чаши: <br>
-                За последнее время произошло разрушение мозаичного покрытия примерно на 10% площади.
+                для плиточного бассейна. При обследовании были выявлены следующие «заболевания» чаши: <br><br>
+                За последнее время произошло разрушение мозаичного покрытия примерно на 10% площади. <br><br>
                 В выпускных отверстиях лотков, в донном сливе скопился белый налет который состоит из затирки и остатков
                 клея
-                размытых водой.
+                размытых водой. <br><br>
                 Оставшаяся мозаика имеет слабое сцепление с основанием, происходит поэтапное вымывание затирки и
                 разрушение
-                клеевого слоя. Наибольшая интенсивность данных процессов наблюдается в верхней части бортика чаши. <br>
+                клеевого слоя. Наибольшая интенсивность данных процессов наблюдается в верхней части бортика чаши.
+                <br><br>
                 При простукивании стен отслоения штукатурки не выявлено. Сама конструкция бетонной чаши не имеет следов
-                разрушения или коррозии арматуры, протечек нет
+                разрушения или коррозии арматуры, протечек нет <br><br>
                 Итак предстоящий объем работ – снятие мозаики, зачистка и выравнивание стен, нанесение нового слоя
                 гидроизоляции и затем укладка стеклянной мозаики и ее затирка эпоксидными составами. Попутно выполнение
                 реконструкции переливного лотка, в нем в качестве отделочного материала решено применить керамогранитную
-                плитку для уменьшения расхода затирки и облегчения уборки в переливном лотке. <br>
-                Все лицевые части закладных деталей сняли и увезли на очистку и полировку.
+                плитку для уменьшения расхода затирки и облегчения уборки в переливном лотке. <br><br>
+                Все лицевые части закладных деталей сняли и увезли на очистку и полировку. <br><br>
                 Самый сложный и пыльный этап – очистка остатков клея. Работа выполняется вручную «болгарками» с
                 алмазными
                 дисками. После мелкого ремонта поверхности выполняется нанесение гидроизоляции. После успешной
                 опрессовки чаши
-                в течение пяти дней двигаемся дальше. <br>
+                в течение пяти дней двигаемся дальше. <br><br>
                 При реконструкции перелива изменилась геометрия лотка и ни одна из существующих решеток не помещалась в
                 нем.
                 Была приобретена решетка Российского производителя большего размера и собственными силами отфрезерована
                 на ЧПУ
-                станке по размерам готового лотка.
+                станке по размерам готового лотка. <br><br>
                 Самый приятный момент к которому мы шли без малого полтора месяца – все затерто и помыто, нержавейка
                 сияет,
                 решетка уложена, роллер с жалюзи встал наместо. Наливаем воду…
