--- a/app/index.html
+++ b/app/index.html
@@ -810,7 +810,9 @@
       </section>
 
       <section class="reviews section">
-
+ <h2 class="reviews__title title">
+   ОТЗЫВЫ
+ </h2>
         <div class="reviews__wrapper">
           <div class="reviews__slider__inner">
 
