fix pravka 6, 17b 50%, 18, 23, 24, 25, 29, 32, 37, reviews, padding title, leter spacing add 2px-1px

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -36,7 +36,7 @@
               </ul>
             </div>
             <div class="start__wrapper">
-              <h1 class="start__title">
+              <h1 class="start__title devtitle">
                 МЫ ГОРДИМСЯ НАШИМИ ПРОЕКТАМИ
               </h1>
               <p class="start__text text">
