--- a/app/mosaic.html
+++ b/app/mosaic.html
@@ -1017,7 +1017,254 @@
 
     </main>
 
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
 
+
+          <div class="footer__item footer__item-logo">
+            <a class="logo" href="index.html">
+              <img class="logo__img" src="images/logo/logo.png" alt="">
+            </a>
+          </div>
+
+          <div class="footer__item footer__item-nav">
+            <ul class="footer__menu">
+              <li class="footer__menu-list">
+                <a href="index.html" class="footer__menu-list--link">
+                  ГЛАВНАЯ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="about.html" class="footer__menu-list--link">
+                  О КОМПАНИИ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="gallery.html" class="footer__menu-list--link">
+                  ГАЛЕРЕЯ РАБОТ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="news.html" class="footer__menu-list--link">
+                  НОВОСТИ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="jobs.html" class="footer__menu-list--link">
+                  ВАКАНСИИ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="reviews.html" class="footer__menu-list--link">
+                  ОТЗЫВЫ
+                </a>
+              </li>
+            </ul>
+          </div>
+
+
+
+          <div class="footer__item footer__item-menu">
+            <ul class="footer__menu">
+              <li class="footer__menu-list">
+                <a class="footer__menu-list--link" href="construction.html">
+                  СТРОИТЕЛЬСТВО БАССЕЙНОВ
+                </a>
+              </li>
+              <ul class="footer__menu-mobil">
+                <li class="footer__menu-mobil__list">
+                  <a class="footer__menu-mobil__list--link" href="concrete.html">
+                    БЕТОННЫЕ БАССЕЙНЫ
+                  </a>
+                </li>
+                <li class="footer__menu-mobil__list">
+                  <a class="footer__menu-mobil__list--link" href="mosaic.html">
+                    Мозаичные бассейны
+                  </a>
+                </li>
+                <li class="footer__menu-mobil__list">
+                  <a class="footer__menu-mobil__list--link" href="pvc.html">
+                    Плёночные бассейны
+                  </a>
+                </li>
+                <li class="footer__menu-mobil__list">
+                  <a class="footer__menu-mobil__list--link" href="children.html">
+                    детские БАССЕЙНЫ
+                  </a>
+                </li>
+              </ul>
+              <li class="footer__menu-list">
+                <a href="design.html" class="footer__menu-list--link">
+                  ПРОЕКТИРОВАНИЕ БАССЕЙНОВ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="repair.html" class="footer__menu-list--link">
+                  РЕКОНСТРУКЦИЯ И РЕМОНТ БАССЕЙНОВ
+                </a>
+              </li>
+              <li class="footer__menu-list">
+                <a href="404.html" class="footer__menu-list--link">
+                  ОБСЛУЖИВАНИЕ БАССЕЙНОВ
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__item footer__item-requisites">
+
+
+            <p class="footer__requisites">
+              Реквизиты
+              <br>
+              ООО “Линия воды”
+              <br>
+              <br>
+              ИНН: 3810326662
+              <br>
+              ОГРН: 1123850035650
+              <br>
+              БИК: 044525974
+              <br>
+              р/c: 40702810210000717176
+            </p>
+            <p class="footer__city">
+              192241, г. Санкт-Петербург,
+              <br>
+              ул. Южное шоссе, д. 37/4, офис 111
+            </p>
+            <a class="footer__requisites-text" href="politics.html">
+              Политика конфиденциальности
+            </a>
+          </div>
+
+          <div class="footer__item footer__item-contacts">
+            <div class="footer__social__wrapper">
+              <ul class="global__social footer__social ">
+                <li class="global__social-list">
+                  <a href="#" class="global__social-list--link global-btn">
+                    <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_231_1438)">
+                        <path
+                          d="M1.74993 12.1875L7.06243 14.25C7.6666 16.2917 8.93744 20.525 9.18744 21.125C9.43744 21.725 9.99994 21.5 10.2499 21.3125C11.0833 20.625 12.8499 19.1625 13.2499 18.8125C13.6499 18.4625 14.2499 18.6667 14.4999 18.8125L19.3749 22.4375C19.6249 22.625 20.2499 23.1875 20.6249 23.0625C20.9999 22.9375 20.9999 22.6875 21.1874 21.875C22.3541 16.2292 24.7374 4.67502 24.9374 3.62502C25.1874 2.31252 25.106 2.26644 24.9999 2.12502C24.8124 1.87502 24.2291 2.10419 23.9999 2.18753L2.24994 10.5625L1.62493 10.8125C0.81246 11.1875 0.999939 11.9375 1.74993 12.1875Z"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M8.99999 13.9375L10.3125 18C10.3958 17.6875 10.5 16.9375 10.6875 16C10.8553 15.1608 10.875 15 11.25 14.625L19.875 6.375C16.3958 8.47917 9.37499 12.75 9.12499 13C8.87499 13.25 8.93749 13.7292 8.99999 13.9375Z"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M21.4375 12.5625C21.3375 13.1625 21.3125 13.3542 21.3125 13.375M20.9375 14.9375C20.3875 17.5375 19.9167 19.7292 19.75 20.5"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_231_1438">
+                          <rect width="25" height="25" fill="white" transform="translate(0.625)" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+
+                  </a>
+                </li>
+                <li class="global__social-list">
+                  <a href="#" class="global__social-list--link global-btn">
+                    <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_231_1441)">
+                        <path
+                          d="M15.6875 18.1875C15.25 18.125 13.1875 17.5 11.9375 16.75C10.6875 16 8.81254 14.0625 7.81254 12.5625C6.81254 11.0625 6.87504 9.87504 6.87504 9.25004C6.87504 8.62504 7.31254 7.68754 8.06254 7.18754C8.66254 6.78754 9.52087 7.02087 9.81254 7.18754C10.1667 7.9792 10.8875 9.60004 10.9375 9.75004C11 9.93754 11.125 10.25 10.8125 10.5625C10.5 10.875 10.0559 11.3257 10 11.4375C9.93754 11.5625 9.93754 11.875 10.5 12.5625C11.0625 13.25 11.375 13.5625 12.125 14.1875"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M15.6875 18.1875C17 18.375 18.0782 17.7743 18.625 17.0625C19.0625 16.493 19.088 15.5599 18.9393 15.2604C18.1691 14.8599 16.5919 14.0441 16.4449 13.9852C16.2612 13.9115 15.9562 13.7681 15.6241 14.0581C15.2921 14.3482 14.7431 15.2192 14.625 15.2604C13.9375 15.5 12.625 14.625 12.125 14.1875"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M18.75 20.5624C18.2917 20.9166 16.9375 21.7124 15.6875 22.0624C14.125 22.4999 12.5625 22.4374 11.8125 22.3749C11.0625 22.3124 9.31251 21.8749 8.4375 21.3749C7.77484 20.9963 7.45833 20.7916 7.375 20.7499L3.9375 21.6249L4.75 18.1874C4.41667 17.7291 3.73225 16.5682 3.4375 15.6249C3.12501 14.6249 2.9375 13.8761 2.9375 12.2499C2.9375 10.8124 3.18751 10.0624 3.4375 9.31242C3.65036 8.67382 4.125 7.62492 4.6875 6.81242C5.25 5.99992 6.31251 4.68742 7.75001 3.87492C9.18751 3.06242 10.4375 2.56242 12.125 2.43743C13.5929 2.32871 14.5 2.56245 15.5 2.74992C16.2599 2.89238 18.125 3.74992 18.8125 4.31242C19.5 4.87492 20.625 5.87495 21.4375 7.12492C22.2927 8.44063 22.6458 9.81242 22.75 10.3124C22.8333 10.8749 22.975 12.2624 22.875 13.3124C22.75 14.6249 22.5 15.4374 22.1875 16.1874C21.875 16.9374 21.6875 17.3125 21.375 17.75C21.125 18.1 21.375 17.75 21 18.25M20.0625 19.3749L19.8125 19.6249"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M5.75 2.9375C5.8125 2.875 6.09458 2.64782 6.72289 2.2391C8.43233 1.27471 9.91879 0.68124 11.9255 0.53288C13.6711 0.403829 14.7498 0.681268 15.939 0.903791C16.8426 1.07288 19.0605 2.09073 19.8781 2.75839C20.6956 3.42604 22.0335 4.61302 22.9997 6.09666C24.0167 7.65834 24.4366 9.28657 24.5605 9.88004C24.6595 10.5477 24.828 12.1946 24.7091 13.4409C24.5605 14.9987 24.3091 15.9848 23.9375 16.875C23.5659 17.7652 23.2826 18.3125 22.9997 18.7079C22.7024 19.1234 21.4141 20.5873 21.3646 20.6367L20.6875 21.375L19.8038 22.0462C19.2587 22.4666 17.6484 23.4112 16.1619 23.8266C14.3039 24.3459 12.4458 24.2717 11.5539 24.1975C10.662 24.1234 8.58097 23.6041 7.54044 23.0106C7.30269 22.875 7.3125 22.875 7.125 22.75L1.125 24.3125L2.625 18.3125C2.22861 17.7685 1.9375 17.0625 1.59459 16.1857C1.14158 15.0274 0.999997 14.11 1 12.1798C1 10.4735 1.2973 9.58331 1.59459 8.6931C1.70889 8.31623 2.03328 7.4494 2.3125 6.9375C2.6875 6.25 2.8125 6.0625 3.375 5.25M4.6875 3.75L4.3125 4.125"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_231_1441">
+                          <rect width="25" height="25" fill="white" transform="translate(0.375)" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+
+                  </a>
+                </li>
+                <li class="global__social-list">
+                  <a href="#" class="global__social-list--link global-btn">
+                    <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_231_1437)">
+                        <path
+                          d="M3.43744 6.1875C3.42354 6.1875 3.40933 6.1875 3.39484 6.1875M3.39484 6.1875C2.71465 6.1875 1.41036 6.1875 1.31244 6.1875C1.18744 6.1875 0.687444 6.375 0.937444 7C1.18744 7.625 3.18744 11.75 3.56244 12.3125C3.93744 12.875 5.12494 14.9375 6.24994 16.125C7.37494 17.3125 8.62494 18.3125 9.81244 18.75C10.9999 19.1875 12.0022 19.2616 12.5624 19.3125C13.2499 19.375 13.6874 19.375 14.0624 19.3125C14.309 19.2714 14.6666 19.1875 14.7499 19.125C14.8333 19.0208 14.9374 18.75 14.9374 18.4375C14.9374 18.0573 14.9374 17.4375 15.0624 17.0625C15.2916 16.375 15.4166 16.3542 15.5624 16.1875C15.7499 16.0625 16.0624 15.9875 16.3124 16.1875C16.6249 16.4375 16.9999 16.75 17.9374 17.75C18.8749 18.75 19.5624 19.3125 19.6874 19.3125H24.1874C24.3749 19.2708 24.7749 19.1125 24.8749 18.8125C24.9999 18.4375 24.8124 17.875 24.4374 17.375C24.0624 16.875 23.3749 16 22.4374 15.1875C21.4999 14.375 21.1874 14.0625 21.0624 13.75C20.9624 13.5 20.8749 13.125 21.0624 12.875C21.4374 12.375 22.2624 11.2875 22.5624 10.9375C22.9374 10.5 24.3749 8.3125 24.5624 7.9375C24.7499 7.5625 24.9999 7.0625 24.9374 6.75C24.8749 6.4375 24.5624 6.1875 24.2499 6.1875C23.9999 6.1875 21.2291 6.1875 19.8749 6.1875C19.7083 6.1875 19.3249 6.3 19.1249 6.75C18.8749 7.3125 18.6249 8.875 16.4999 11.5625C14.7999 13.7125 14.7499 10.75 14.8124 8.4375V6.4375C14.8124 6.20833 14.6624 5.75 14.0624 5.75C13.4624 5.75 10.9791 5.75 9.81244 5.75C9.60411 5.77083 8.92494 6.0125 8.87494 6.3125C8.87494 6.5625 9.24994 6.625 9.49994 6.75C9.74994 6.875 10.1249 7.0625 10.1874 7.8125C10.2499 8.5625 10.4374 10.375 10.1874 11.375C9.93744 12.375 9.62494 12.4375 9.24994 12.25C8.87494 12.0625 7.68744 10.3125 7.31244 9.625C7.01244 9.075 6.47911 8.02083 6.24994 7.5625L5.93744 6.875C5.85411 6.64583 5.58744 6.1875 5.18744 6.1875C4.78744 6.1875 3.8257 6.1875 3.39484 6.1875Z"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                        <path
+                          d="M3.25 8C3.5 8.5 3.60417 8.70833 3.625 8.75M4.25 9.875C4.52083 10.4167 5.175 11.6625 5.625 12.3125C6.075 12.9625 6.60417 13.625 6.8125 13.875"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_231_1437">
+                          <rect width="25" height="25" fill="white" transform="translate(0.375)" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+
+                  </a>
+                </li>
+                <li class="global__social-list">
+                  <a href="#" class="global__social-list--link global-btn">
+                    <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_231_1442)">
+                        <path
+                          d="M11.5625 12.625L12.25 10.375M12.5625 9.37495L12.75 8.74995M9.24999 11.625C9.10416 11.2916 8.77499 10.15 8.87499 9.24995C8.99999 8.12495 9.24999 7.43745 9.68749 6.93745C10.125 6.43745 11.0625 5.56245 12.0625 5.68745C13.0625 5.81245 13.3125 6.12495 13.75 6.74995C14.1875 7.37496 14.125 8.68746 14.0625 8.99996C14.0125 9.24996 13.375 11.2708 13.0625 12.25C12.8958 12.6875 12.6625 13.6875 13.0625 14.1875C13.4625 14.6875 13.8958 14.9791 14.0625 15.0625C14.5 15.1458 15.5125 15.175 16.0625 14.625C16.75 13.9375 17.3125 13.8125 17.9375 12.0625C18.4375 10.6625 18.5625 9.18745 18.5625 8.43746C18.5625 7.93745 18.5375 6.88746 17.9375 5.93746C17.1875 4.74996 16.625 4.37496 16.0625 4.06246C15.5 3.74996 14.5625 3.43746 13.5 3.49996C12.4375 3.56246 11.6805 3.68745 11.25 3.81245C10.6042 3.99995 9.14999 4.71245 8.49999 5.56245C7.68749 6.62495 7.37499 7.49996 7.18749 8.43746C7.03749 9.18745 7.06249 10.5 7.18749 10.875C7.37499 11.4375 7.64999 11.9 7.99999 12.25C8.34999 12.6 7.89582 13.9791 7.62499 14.625C7.41666 14.8333 6.6923 15 5.99999 14.4375C5.24999 13.8281 4.99999 13.625 4.37499 12.5C3.73686 11.3513 3.62499 10.1875 3.62499 9.49995C3.62499 8.81245 3.56249 7.56245 4.12499 6.49995C4.68749 5.43745 5.31249 4.31245 5.87499 3.68745C6.37845 3.12805 7.68749 1.99995 8.87499 1.49995C10.0625 0.999954 11.3125 0.687454 12.0625 0.624954C12.8125 0.562454 14.4375 0.374954 15.9375 0.749954C17.4375 1.12495 18.3125 1.56245 19.1875 2.18745C20.0625 2.81245 20.9375 3.81245 21.375 4.56245C21.8125 5.31245 22.1875 6.18745 22.375 6.99995C22.5625 7.81245 22.5625 8.93745 22.5625 9.56245C22.5625 10.1875 22.375 11.6875 22.0625 12.5C21.75 13.3125 21.375 14.3125 20.8125 15.0625C20.25 15.8125 19.4375 16.625 18.625 17.0625C17.8125 17.5 17.0625 17.9375 16.25 18.0625C15.4375 18.1875 14.3817 18.1612 13.9375 18.0625C13.375 17.9375 12.8125 17.75 12.375 17.4375C12.1145 17.2514 11.9792 17.1041 11.9375 17.0625C11.8125 17.4583 11.5 18.45 11.25 19.25C10.9375 20.25 10.375 22.3125 9.49999 23.5C8.79999 24.45 8.20832 24.6041 7.99999 24.5625C7.62499 24.4875 7.41249 24.1875 7.31249 22.9375C7.21249 21.6875 7.39582 19.9583 7.49999 19.25C7.85416 17.75 8.58749 14.6625 8.68749 14.3125C8.78749 13.9625 9.10416 12.5 9.24999 11.8125V11.625Z"
+                          stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_231_1442">
+                          <rect width="25" height="25" fill="white" transform="translate(0.625)" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__btn-wrapper">
+              <a class="footer__btn global-btn global__btn-contact" href="tel:+79210941255">
+                +7 921 094 12 55
+              </a>
+              <a class="footer__btn global-btn global__btn-mail" href="info@linva.ru">
+                INFO@LINWA.RU
+              </a>
+            </div>
+
+          </div>
+
+
+
+        </div>
+        <div class="footer__down">
+          <p class="footer__down-copyright">
+            Компания «Линия Воды»
+            <br>
+            2001—2022
+            <br>
+            <br>
+            © Все права защищены
+            <br>
+            Копирование, в том числе частичное, запрещено
+
+            <a class="lapki" href="https://lapki-web.ru">Разработка сайта студия lapki-web.ru</a>
+          </p>
+        </div>
+      </div>
+
+
+
+
+
+    </footer>
 
     <div class="modal">
       <div class="modal__inner">
